# mammo-second-reader

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
configs/: baseline.toml  regularised.toml  rocm_env.sh  vgg16_scratch.toml  vgg16_transfer.toml
notebooks/: 00_gpu.ipynb  01_check_cbis_ddsm_dataset.ipynb  02_fix_image_paths.ipynb  03_dicom_preprocessing.ipynb  04_dataset_splits.ipynb  05_dataset_augmentation.ipynb  06_model_architectures.ipynb  07_training_pipeline.ipynb  08_evaluation_metrics.ipynb  09_grad_cam.ipynb  10_grad_cam_gallery.ipynb  gpu.ipynb
src/: config.py
src/data/: augment.py  cbis_ddsm.py  dataset.py  dicom_to_png.py  manifest.py  preprocessing.py  splits.py
src/evaluation/: calibration.py  decision_curve.py  density_strata.py  evaluate.py  gradcam.py  gradcam_roi.py  metrics.py
src/models/: __init__.py  baseline.py  ensemble.py  regularised.py  transfer.py
src/reporting/: make_figures.py
src/training/: callbacks.py  ensemble.py  finetune.py  loss.py  sampler.py  train.py
src/web/: app.py  constants.py  evaluation_page.py  finetune_page.py  inference.py  inference_page.py
