[project]
name = "cm3070-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.136.1",
    "grad-cam>=1.5.5",
    "gradio>=6.14.0",
    "jupyterlab>=4.1.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pydicom>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch",
    "torchvision",
    "transformers[torch]>=5.8.0",
    "uvicorn>=0.47.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
